# simple_streamlit_app

./: app.py  pyproject.toml  requirements.txt
