[tool.poetry]
name = "simple-streamlit-app"
version = "0.1.0"
description = ""
authors = ["Bilvantis-AI-ML <Bhaskar.Gujju@bilvantis.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.37.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
